--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/validator": "^13.7.15",
     "cors": "^2.8.5",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.3"
