--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^18.15.11",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
@@ -23,6 +24,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/validator": "^13.7.15",
     "cors": "^2.8.5",
     "nodemon": "^2.0.22",
